Added a new style tag, and the Main Heading.

--- a/index.html
+++ b/index.html
@@ -4,3 +4,9 @@
         <title>Hello World</title>
     </head>
 </html>
+<h1>Welcome to this new website!</h1>
+<style>
+    h1 {
+        color: blue;
+    }
+</style>
